--- a/app/src/main/res/layout/activity_data_list_view.xml
+++ b/app/src/main/res/layout/activity_data_list_view.xml
@@ -4,30 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DataListView">
+    tools:context=".DataListView"
+    android:background="@drawable/grey"
 
-    <include layout="@layout/layout"
-        android:id="@+id/toolbar">
-    </include>
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="adddata"
-        android:text="Add Data"
-        android:layout_below="@+id/main_data_listview"
-        />
 
-   <!--! <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-       -->
+    >
+
+
 
     <ListView
         android:id="@+id/main_data_listview"
         android:layout_width="260dp"
-        android:layout_height="450dp"
+        android:layout_height="480dp"
         android:layout_centerInParent="true"
         android:scrollbarAlwaysDrawVerticalTrack="true"
 
