--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddData">
+    tools:context=".AddData"
+    android:background="@drawable/grey"
+    >
     <TextView
         android:id="@+id/data_heading_textview"
         android:layout_width="wrap_content"
