--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DataActivity"
-    android:orientation="vertical">
-    <include layout="@layout/layout"
-        android:id="@+id/toolbar"
-        ></include>
+    android:orientation="vertical"
+    android:background="@drawable/grey"
+    >
+
     <TextView
         android:id="@+id/data_heading_textview"
         android:layout_width="wrap_content"
@@ -25,18 +25,18 @@
             android:orientation="vertical"
             android:paddingStart="100dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:labelFor="@+id/Data_userId_edittext"
-                android:text="UserId" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:labelFor="@+id/Data_userId_edittext"-->
+                <!--android:text="UserId" />-->
 
-            <TextView
-                android:id="@+id/Data_userId_edittext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="UserId"
-                android:inputType="textCapWords" />
+            <!--<TextView-->
+                <!--android:id="@+id/Data_userId_edittext"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:hint="UserId"-->
+                <!--android:inputType="textCapWords" />-->
 
             <TextView
                 android:layout_width="wrap_content"
@@ -204,10 +204,10 @@
 
                 />
 
-            <TextView
-                android:id="@+id/book_message_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <!--<TextView-->
+                <!--android:id="@+id/book_message_textview"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content" />-->
         </LinearLayout>
     </ScrollView>
 
