--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:background="@drawable/grey"
     >
 
 
@@ -38,7 +39,7 @@
         android:layout_centerInParent="true"
         android:onClick="validate"
 
-        android:layout_below="@+id/etPassword"
+        android:layout_below="@+id/login_rem"
         />
 
     <TextView
@@ -54,6 +55,8 @@
         android:layout_height="wrap_content"
         android:checked="true"
         android:text="Save Login"
+        android:layout_below="@+id/etPassword"
+        android:layout_centerInParent="true"
         android:id="@+id/login_rem"
         />
 
